Bug 940633 - [Cost Control] Fix alignment of checkboxes in usage tab.

--- a/apps/costcontrol/style/views/datausage.css
+++ b/apps/costcontrol/style/views/datausage.css
@@ -40,7 +40,7 @@
   border: none;
 }
 
-#datausage-tab .toggle-data li label span {
+#datausage-tab .toggle-data li label span:after {
   right: 0;
   left: auto;
 }
